// Copyright 2025 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package google.ads.admanager.v1;

import "google/api/field_behavior.proto";
import "google/api/resource.proto";

option csharp_namespace = "Google.Ads.AdManager.V1";
option go_package = "google.golang.org/genproto/googleapis/ads/admanager/v1;admanager";
option java_multiple_files = true;
option java_outer_classname = "ContentLabelMessagesProto";
option java_package = "com.google.ads.admanager.v1";
option php_namespace = "Google\\Ads\\AdManager\\V1";
option ruby_package = "Google::Ads::AdManager::V1";

// A content label.
message ContentLabel {
  option (google.api.resource) = {
    type: "admanager.googleapis.com/ContentLabel"
    pattern: "networks/{network_code}/contentLabels/{content_label}"
    plural: "contentLabels"
    singular: "contentLabel"
  };

  // Identifier. The resource name of the `ContentLabel`.
  // Format: `networks/{network_code}/contentLabels/{content_label_id}`
  string name = 1 [(google.api.field_behavior) = IDENTIFIER];

  // Optional. The display name of the `ContentLabel`.
  string display_name = 2 [(google.api.field_behavior) = OPTIONAL];
}
